修改文章详情页

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -75,7 +75,7 @@
                 {{userinfo.realname}}<i class="adviser-v-i"></i>
               </span>
             </div>
-            <div style="float:right;" data-introduce="{{article.article_info.introduce}}" id="intro">
+            <div style="float:right;" >
               <div class="bdsharebuttonbox" style="margin-top: 15px;">
                 <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
                 <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
@@ -182,7 +182,6 @@
           slidesPerGroup : 2,
           pagination: true
       });
-    console.log($('#intro').attr('data-introduce'))
     window._bd_share_config={
           "common":{
               "bdSnsKey":{},
@@ -193,7 +192,7 @@
               "bdStyle":"0",
               "bdSize":"16",
               "bdUrl":window.location.href,
-              "bdDesc":$('#intro').attr('data-introduce')
+              "bdDesc":''
           },
           "share":{}
       };
