--- a/views/index.html
+++ b/views/index.html
@@ -387,7 +387,7 @@
         //正确
         $('#selByIp').on('click',function (e) {
           e.preventDefault();
-          $.cookie('currentarea', iparea, { path: "/",domain: '.jjl.cn',expires: 36500});
+          $.cookie('currentarea', iparea, { path: "/",domain: js_api_config.domain,expires: 36500});
           if (endFix) {
             window.location.href = fn.urlgen('branch_home','c='+ result.data)+'?'+endFix;
           }
@@ -405,7 +405,7 @@
       if (currentarea) {
         e.preventDefault();
       }
-      $.cookie('currentarea', currentarea, { path: "/",domain: '.jjl.cn',expires: 36500}); 
+      $.cookie('currentarea', currentarea, { path: "/",domain: js_api_config.domain,expires: 36500});
       if (endFix) {
         window.location.href = $(this).attr("href")+'?'+endFix;
       }
