--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -33,7 +33,8 @@
     color:#c13232;
   }
   .new-activity-item-title .activity-time{
-    float:right
+    float:right;
+    *margin-top:-40px;
   }
   .new-activity-item-con{
     padding:0 20px;
@@ -76,6 +77,7 @@
     line-height: 30px;
     text-align: center;
     margin-bottom: 0;
+    *margin-bottom:20px;
   }
   .new-activity-qita h2{
     font-size: 16px;
@@ -180,21 +182,21 @@
         {% if loop.index<=6 %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
+          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
+          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
         </div>
         {% endif %}
         {% else %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | shorten(10)}}】</span>{{item.title | ellipsis(16)}}</h2>
+          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(16)}}</h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time |  shorten(10)}}】</span>{{item.title | ellipsis(16)}}</h2>
+          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(16)}}</h2>
         </div>
         {% endif %}
         {% endif %}
