--- a/views/widget/online_evaluation/quick_application2.html
+++ b/views/widget/online_evaluation/quick_application2.html
@@ -5,7 +5,7 @@
       <input name="quickName" id="quickName-act" type="text" placeholder="输入您的姓名" />
       <div class="numTip" id="nameNumTip-act" style="margin-left: 108px;"></div>
     </div>
-    <div class="quick-text1" style="margin-left: 194px;*margin-left: 180px;">
+    <div class="quick-text1" style="margin-left: 194px;*margin-left: 175px;">
       <label class="title" for="quickPhone-act"  style="font-weight: 400"><span >*</span>手&nbsp;&nbsp;&nbsp;&nbsp;机&nbsp;&nbsp;：</label>
       <input name="quickPhone" id="quickPhone-act" type="text" placeholder="输入您的手机号" />
       <div class="numTip" id="phoneNumTip-act"  style="margin-left:88px;"></div>
@@ -40,7 +40,7 @@
       </select>
       <div class="numTip" id="departmentNumTip-act"></div>
     </div>
-    <div class="quick-text1" style="margin-left: 190px;" >
+    <div class="quick-text1" style="margin-left: 190px;*margin-left:172px;" >
       <label class="title" for="quickPhoneCode-act" style="font-weight: 400" ><span >*</span>验证码&nbsp;&nbsp;：</label>
       <input name="quickPhoneCode" id="quickPhoneCode-act" type="text" placeholder="输入手机验证码" style="width: 110px"/>
       <span class="quick-get-phone-code-act" id="phone-activity-booking" style="width: 86px;cursor: pointer;color:#ff7d31;" >获取验证码</span>
@@ -52,7 +52,7 @@
       <div class="numTip" id="emailNumTip-act" style="margin-left: 100px;"></div>
     </div>
 
-    <div class="quick-btn-box" style="width: 224px;margin-top:4px;margin-left: 242px;">
+    <div class="quick-btn-box" style="width: 224px;margin-top:4px;margin-left: 242px;*margin-left:224px;">
       <div class="quick-btn" id="booking-btn" style="cursor: pointer; background: #c13232;width: 224px;">
         立即预约
       </div>
