修改参赞  金色力量标识

--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -75,7 +75,7 @@
     </dd>
   </dl>
   <p class="advisor-sushu" style="width: 100%;text-align: center">{{ advisor.job_number }}</p>
-  <p class="advisor-sushu" style="width: 100%;text-align: center;padding-bottom: 20px">{{ advisor.job_number }}</p>
+  <p class="advisor-sushu" style="width: 100%;text-align: center;padding-bottom: 20px">{{ advisor.position_name }}</p>
   <!--<div class="counsellor-intro">-->
     <!--<p>{{ advisor.introduce | ellipsis(80) }}</p>-->
   <!--</div>-->
