--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper2.7.6.css" >
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper2.7.6.js"></script>
+  <style>
+    .canzanps p {
+      font-size: 14px;
+      line-height: 26px;
+      color: #333333;
+    }
+  </style>
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
@@ -89,7 +96,8 @@
       {% include "widget2/blank/blank.html" %}
       {% endif %}
       {% else %}{# 参赞介绍 #}
-      <h2>参赞介绍：</h2>
+      <h2 style="font-size: 18px; margin: 20px">参赞介绍：</h2>
+      <div class="canzanps" style="padding-bottom: 20px;margin: 0 20px">{{ canzan_jianjie.description | safe }}</div>
       {% endif %}
     </div>
   </div>
