--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -129,7 +129,7 @@
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
-  <div class="dui-layout-lg about-guanggao"  style="height: 130px;background: #dedede;overflow: hidden" id="AD_PROFILE_SEAT1">
+  <div class="dui-layout-lg about-guanggao"  style="height: 130px;background: #dedede;overflow: hidden" id="AD_ACTIVITY_SEAT1">
   </div>
   </div>
 <div class="dui-layout-lg clearfix new-activity">
@@ -213,9 +213,6 @@
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_COUNSELLER_SEAT10",helper) }}
 </body>
-<script>
-  var AD_PAGE_NAME = "ACTIVITY"; //设置页面对应的名字
-</script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
