--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -69,7 +69,7 @@
     <!--<li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>-->
   <!--</ul>-->
   <dl>
-    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}');background-position: 0 0;"><a target="_blank" href="{{helper.urlgen(advisor.uid)}}"></a></dt>
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}');background-position: 0 0;"></dt>
     <dd>
       <p class="advisor-name">{{ advisor.realname }}</p>
     </dd>
