--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -102,7 +102,10 @@
     </div>
   </div>
 </div>
-{% if userinfo.adviser_type==1 %}
+{% if userinfo.usertype==3 %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{% elseif userinfo.adviser_type==1 %}
 {% import "widget/new_slide/new_slide3.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
 {% elseif userinfo.adviser_type==2   %}
@@ -123,6 +126,7 @@
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
