--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -91,7 +91,7 @@
     color:#c13232;
 
   }
-  .new-activity-qita h2 a{
+  .new-activity-qita h2 .know{
     float:right;
     display: inline-block;
     width: 115px;
@@ -101,6 +101,12 @@
     text-align: center;
     line-height: 30px;;
     font-size: 14px;
+  }
+  .new-activity-qita h2 .know-title{
+    color:#333333;
+  }
+  .new-activity-qita h2 .know-title:hover{
+    color:#c13232
   }
   .new-activity-qita h2 i{
     display: inline-block;
@@ -118,6 +124,12 @@
 .booking span{
   cursor: pointer;
 }
+  .new-activity-item-title a{
+    color:#333333;
+  }
+  .new-activity-item-title a:hover{
+    color:#c13232;
+  }
 </style>
 <script>
   var AD_PAGE_NAME = "ACTIVITY";
@@ -144,7 +156,8 @@
         {% for item in activitylist.list %}
           {% if loop.index%2==1 %}
         <div class="new-activity-item">
-          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span>{{item.title}}<span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
+          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span><a
+            href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(20)}}</a><span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
             <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">【查看详情】</a></p>
             <ul>
@@ -158,7 +171,8 @@
         {% else %}
 
         <div class="new-activity-item" style="margin-left: 20px">
-          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span>{{item.title}}<span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
+          <h2 class="new-activity-item-title"><span class="city-name">【{{item.hold_city | getCity}}】</span><a
+            href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(20)}}</a><span  class="activity-time">{{ item.inputtime | getDefaultFormat }}</span></h2>
           <div class="new-activity-item-con">
             <p class="description"><span>{{item.description | ellipsis(27)}}</span><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">【查看详情】</a></p>
             <ul>
@@ -184,21 +198,21 @@
         {% if loop.index<=6 %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
+          <h2><a class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(14)}}</a><i>最新</i></h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(14)}}<i>最新</i></h2>
+          <h2><a class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(14)}}</a><i>最新</i></h2>
         </div>
         {% endif %}
         {% else %}
         {% if loop.index%2==1 %}
         <div class="new-activity-item new-activity-qita">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(16)}}</h2>
+          <h2><a class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(16)}}</a></h2>
         </div>
         {% else %}
         <div class="new-activity-item new-activity-qita" style="margin-left: 20px;">
-          <h2><a href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span>{{item.title | ellipsis(16)}}</h2>
+          <h2><a class="know" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">了解详情</a><span>【{{item.hold_city | getCity}}{{item.start_time | sliceShorten(5,7)}}.{{item.start_time | sliceShorten(8,11)}}】</span><a class="know-title" href="{{helper.active_urlgen('activity', item.id | string,'c='+item.hold_city)}}">{{item.title | ellipsis(16)}}</a></h2>
         </div>
         {% endif %}
         {% endif %}
