--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -47,9 +47,11 @@
     *margin-left: 10px;
   }
   .wenda-zhuanchang .baiwen-baida{
-    display: inline-block;
     font-weight: normal;
-    line-height: 22px;;
+    line-height: 22px;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
   }
   .detail-con p{
     width: 740px;
@@ -105,9 +107,8 @@
     <div class=" activity-detail">
       <p class="tit"><i class="iconfont activity-home" style="font-size: 17px;">&#xe60d;</i>>><a target="_blank"  href="{{ helper.active_urlgen('activity','c='+huodongdiye.hold_city) }}" class="activity-tit">留学活动</a>>><span class="activity-article">文章</span></p>
       <div class="wenda-zhuanchang">
-        <h1 class="baiwen-baida">{{ huodongdiye.title | ellipsis(20)}}</h1>
-        <span class="didian"><i class="iconfont activity-map">&#xe69d;</i>讲座地点：{{ huodongdiye.address_des | ellipsis(30)}}</span>
-        <p style="line-height: 54px;font-size: 14px;color:#666666;">活动时间：{{ huodongdiye.start_time }}</p>
+        <h1 class="baiwen-baida">{{ huodongdiye.title }}</h1>
+        <p style="line-height: 54px;font-size: 14px;color:#666666;"><span class="didian" style="line-height: 54px;"><i class="iconfont activity-map">&#xe69d;</i>讲座地点：{{ huodongdiye.address_des | ellipsis(40)}}</span>活动时间：{{ huodongdiye.start_time }}</p>
       </div>
       <div class="activity-time-tel">
 
