--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -11,6 +11,12 @@
       line-height: 26px;
       color: #333333;
     }
+    .canzanps i {
+      font-style:italic;
+    }
+    .canzanps em {
+      font-style: italic;
+    }
   </style>
 </head>
 <body style="background: #f5f5f5">
