新加坡 的修改

--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@
       <a style="margin-right: 0"  href="#country111"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
       <a  href="#country112"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
       <a  href="#country102"><img src="{{helper.cdnhost}}/assets/img/blr.png" alt="白俄罗斯留学"><p>白俄罗斯</p></a>
-      <a  href="#country52"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加披留学"><p>新加披</p></a>
+      <a  href="#country52"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加坡留学"><p>新加坡</p></a>
       <a  href="#country53"><img src="{{helper.cdnhost}}/assets/img/malaysia.png" alt="马来西亚留学"><p>马来西亚</p></a>
       <a  href="#country110"><img src="{{helper.cdnhost}}/assets/img/danmark.png" alt="丹麦留学"><p>丹麦</p></a>
       <a  href="#country103"><img src="{{helper.cdnhost}}/assets/img/germany.png" alt="德国留学"><p>德国</p></a>
