--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -227,7 +227,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_COUNSELLER_SEAT10",helper) }}
+{{slide.leyu_slide("AD_ACTIVITY_SEAT10",helper) }}
 </body>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
