--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -131,8 +131,11 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+{% if userinfo.usertype==3 %}
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+{% else %}
+<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+{% endif %}
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
