--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -111,7 +111,7 @@
       <p class="tit"><i class="iconfont activity-home" style="font-size: 17px;">&#xe60d;</i>>><a target="_blank"  href="{{ helper.active_urlgen('activity','c='+huodongdiye.hold_city) }}" class="activity-tit">留学活动</a>>><span class="activity-article">文章</span></p>
       <div class="wenda-zhuanchang">
         <h1 class="baiwen-baida">{{ huodongdiye.title }}</h1>
-        <p style="line-height: 54px;font-size: 14px;color:#666666;"><span class="didian" style="line-height: 54px;"><i class="iconfont activity-map">&#xe69d;</i>讲座地点：{{ huodongdiye.address_des | ellipsis(40)}}</span>活动时间：{{ huodongdiye.start_time | shorten(-3)}}</p>
+        <p style="line-height: 54px;font-size: 14px;color:#666666;"><span class="didian" style="line-height: 54px;*margin-top:0;"><i class="iconfont activity-map">&#xe69d;</i>讲座地点：{{ huodongdiye.address_des | ellipsis(40)}}</span>活动时间：{{ huodongdiye.start_time | shorten(-3)}}</p>
       </div>
       <div class="activity-time-tel">
 
