--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -93,7 +93,7 @@
         </dl>
       </div>
     </div>
-    <p class="copyright clearfix">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+    <p class="copyright clearfix" style="*margin-top:-20px;">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
     <div class="adviser-login" onclick="adviserlogin()">
       咨询顾问登录
     </div>
