--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -91,6 +91,7 @@ form, input {
     position: absolute;
     top: 1px;
     left: -24px;
+    line-height: 20px;
 }
 .new_nav_first .new-city .city-cc{
     width:100px;
@@ -227,7 +228,6 @@ form, input {
     outline-style: none;
     line-height: 30px;
     text-align: center;
-    *margin-top:-30px;
 }
 .new_nav_first .search-btn i{
     font-size:16px;
