--- a/views/widget/new_slide_yimin/new_slide2.html
+++ b/views/widget/new_slide_yimin/new_slide2.html
@@ -10,11 +10,11 @@
           <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
-            <span>立即咨询</span>
+            <span>立<br>即<br>咨<br>询</span>
           </li>
           <li class="on" id="r_comment">
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
-            <span>在线评估</span>
+            <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
                  style="width:320px;background: #fff;right:40px;top:0px;position: absolute;border: 1px solid #f8f8f8;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer;color:#333333;">x</div>
