--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -274,23 +274,23 @@
       //文章举报
       report(this,1,city_id);
     });
-    addWaterMarker('文章来源自金吉列')
-    function addWaterMarker(str){
-      var can = document.createElement('canvas');
-      var body = document.getElementById('get-share-img');
-      body.appendChild(can);
-      can.width=500;
-      can.height=300;
-      can.style.display='none';
-      var cans = can.getContext('2d');
-      cans.rotate(-20*Math.PI/180);
-      cans.font = "16px Microsoft JhengHei"; 
-      cans.fillStyle = "rgba(17, 17, 17, 0.50)";
-      cans.textAlign = 'left'; 
-      cans.textBaseline = 'Middle';
-      cans.fillText(str,can.width/3,can.height/2);
-      body.style.backgroundImage="url("+can.toDataURL("image/png")+")";
-      }
+    // addWaterMarker('文章来源自金吉列')
+    // function addWaterMarker(str){
+    //   var can = document.createElement('canvas');
+    //   var body = document.getElementById('get-share-img');
+    //   body.appendChild(can);
+    //   can.width=500;
+    //   can.height=300;
+    //   can.style.display='none';
+    //   var cans = can.getContext('2d');
+    //   cans.rotate(-20*Math.PI/180);
+    //   cans.font = "16px Microsoft JhengHei"; 
+    //   cans.fillStyle = "rgba(17, 17, 17, 0.50)";
+    //   cans.textAlign = 'left'; 
+    //   cans.textBaseline = 'Middle';
+    //   cans.fillText(str,can.width/3,can.height/2);
+    //   body.style.backgroundImage="url("+can.toDataURL("image/png")+")";
+    //   }
   })
   </script>
 </body>
