--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -96,25 +96,25 @@
   line-height: 44px;
 }
 .bdshare-button-style0-16 .bds_weixin{
-  background:url(../img/wx.png) no-repeat 0 0;
+  background:url(../img/wx.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
   width: 6px;
   height: 20px;
 }
 .bdshare-button-style0-16 .bds_tsina{
-  background:url(../img/xl.png) no-repeat 0 0;
+  background:url(../img/xl.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
   width: 4px;
   height: 20px;
 }
 .bdshare-button-style0-16 .bds_sqq{
-  background:url(../img/qq.png) no-repeat 0 0;
+  background:url(../img/qq.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
   width: 4px;
   height: 20px;
 }
 .bdshare-button-style0-16 .weixin-pengyouquan {
-  background:url(../img/pyq.png) no-repeat 0 0;
+  background:url(../img/pyq.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
   width: 4px;
   height: 20px;
