--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -47,10 +47,10 @@
         <h3>猜你喜欢</h3>
       </div>
       {% if userinfo.adviser_type == 1 %}
-            {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
-          {% else %}
-            {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+country,'c='+tdk.cityid) %}
-          {% endif %}
+        {% esi helper.include(esikey,'fragment/guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+      {% else %}
+        {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+      {% endif %}
     </div>
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
@@ -58,9 +58,9 @@
         <h3>相关顾问</h3>
       </div>
       {% if userinfo.adviser_type == 2 %}
-          {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+country,'c='+tdk.cityid,'uid='+userinfo.uid) %}
+          {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
       {% else %}
-        {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+        {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid) %}
       {% endif %}
     </div>
   </div>
