--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -39,12 +39,12 @@
     <div class="dui-layout-silde">
         <div class="clearfix">
             {% if userinfo.status == 1 %} {#离职#}
-            {% import "widget2/community_advisor/community_advisor.html" as advisor_leave %}
-            {{ advisor_leave.advisor_leave(userinfo,helper,login_info) }}
+              {% import "widget2/community_advisor/community_advisor.html" as advisor_leave %}
+              {{ advisor_leave.advisor_leave(userinfo,helper,login_info) }}
             {% else %} {#在职#}
             {% if userinfo.usertype == 2 %}
-            {% import "widget2/community_advisor/community_advisor.html" as advisor %}
-            {{ advisor.advisor(userinfo,helper,login_info) }}
+              {% import "widget2/community_advisor/community_advisor.html" as advisor %}
+              {{ advisor.advisor(userinfo,helper,login_info) }}
             {% elseif userinfo.usertype == 3 %}
             {% import "widget2/community_advisor/community_advisor.html" as counsellor %}
             {{ counsellor.counsellor(userinfo,helper,login_info) }}
@@ -57,21 +57,21 @@
           <h3>猜你喜欢</h3>
         </div>
         {% if userinfo.adviser_type == 1 %}
-            {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
-          {% else %}
-            {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+country,'c='+tdk.cityid) %}
-          {% endif %}
+            {% esi helper.include(esikey,'fragment/guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+        {% else %}
+            {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+        {% endif %}
       </div>
       <div style="margin-top: 20px;" class="dui-box-shadow">
         <div class="common-title" style="border:1px solid #dcdcdc;">
           <i></i>
           <h3>相关顾问</h3>
         </div>
-        {% if userinfo.adviser_type == 2 %}
-          {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+country,'c='+tdk.cityid,'uid='+userinfo.uid) %}
-      {% else %}
-          {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
-      {% endif %}
+          {% if userinfo.adviser_type == 2 %}
+            {% esi helper.include(esikey,'fragment/yimin_xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid,'uid='+userinfo.uid) %}
+          {% else %}
+            {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+userinfo.country,'c='+userinfo.organid) %}
+          {% endif %}
       </div>
     </div>
     <div class="dui-layout-div"></div>
